qhouyee/46/improve-id-generation-and-retrieval: add an ID property shape by default for all forms