@@ -9,20 +9,25 @@ import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import com.cmclinnovations.agent.model.SparqlResponseField;
 import com.cmclinnovations.agent.service.core.AuthenticationService;
+import com.cmclinnovations.agent.service.core.JsonLdService;
 import com.cmclinnovations.agent.utils.ShaclResource;
 import com.cmclinnovations.agent.utils.StringResource;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 
 public class FormTemplateFactory {
   private final AuthenticationService authenticationService;
+  private final JsonLdService jsonLdService;
 
   // Data stores
   private Queue<JsonNode> properties;
@@ -31,19 +36,22 @@ public class FormTemplateFactory {
   private Map<String, JsonNode> nodes;
 
   private final Map<String, String> context;
+  private final Map<String, Object> idPropertyShape;
   private final ObjectMapper objectMapper;
   private static final Logger LOGGER = LogManager.getLogger(FormTemplateFactory.class);
 
   /**
    * Constructs a new form template factory.
    * 
-   * @param authService A service to perform authentication operations.
+   * @param authService   A service to perform authentication operations.
+   * @param jsonLdService A service for interactions with JSON LD.
    */
-  public FormTemplateFactory(AuthenticationService authenticationService) {
+  public FormTemplateFactory(AuthenticationService authenticationService, JsonLdService jsonLdService) {
     this.objectMapper = new ObjectMapper();
     this.authenticationService = authenticationService;
-    this.context = new HashMap<>();
-    this.setupContext();
+    this.jsonLdService = jsonLdService;
+    this.context = this.setupContext();
+    this.idPropertyShape = this.setupIdPropertyShape();
   }
 
   /**
@@ -82,23 +90,44 @@ public class FormTemplateFactory {
   /**
    * Initialise the context for the form template.
    */
-  private void setupContext() {
-    this.context.put(ShaclResource.COMMENT_PROPERTY, ShaclResource.RDFS_PREFIX + ShaclResource.COMMENT_PROPERTY);
-    this.context.put(ShaclResource.LABEL_PROPERTY, ShaclResource.RDFS_PREFIX + ShaclResource.LABEL_PROPERTY);
-    this.context.put(ShaclResource.PROPERTY_GROUP, ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_GROUP);
-    this.context.put(ShaclResource.PROPERTY_SHAPE, ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_SHAPE);
-    this.context.put(ShaclResource.NAME_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.NAME_PROPERTY);
-    this.context.put(ShaclResource.DESCRIPTION_PROPERTY,
+  private Map<String, String> setupContext() {
+    Map<String, String> contextHolder = new HashMap<>();
+    contextHolder.put(ShaclResource.COMMENT_PROPERTY, ShaclResource.RDFS_PREFIX + ShaclResource.COMMENT_PROPERTY);
+    contextHolder.put(ShaclResource.LABEL_PROPERTY, ShaclResource.RDFS_PREFIX + ShaclResource.LABEL_PROPERTY);
+    contextHolder.put(ShaclResource.PROPERTY_GROUP, ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_GROUP);
+    contextHolder.put(ShaclResource.PROPERTY_SHAPE, ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_SHAPE);
+    contextHolder.put(ShaclResource.NAME_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.NAME_PROPERTY);
+    contextHolder.put(ShaclResource.DESCRIPTION_PROPERTY,
         ShaclResource.SHACL_PREFIX + ShaclResource.DESCRIPTION_PROPERTY);
-    this.context.put(ShaclResource.ORDER_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.ORDER_PROPERTY);
-    this.context.put(ShaclResource.NODE_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.NODE_PROPERTY);
-    this.context.put(ShaclResource.GROUP_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.GROUP_PROPERTY);
-    this.context.put(ShaclResource.PROPERTY_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_PROPERTY);
-    this.context.put(ShaclResource.DEFAULT_VAL_PROPERTY,
+    contextHolder.put(ShaclResource.ORDER_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.ORDER_PROPERTY);
+    contextHolder.put(ShaclResource.NODE_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.NODE_PROPERTY);
+    contextHolder.put(ShaclResource.GROUP_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.GROUP_PROPERTY);
+    contextHolder.put(ShaclResource.PROPERTY_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_PROPERTY);
+    contextHolder.put(ShaclResource.DEFAULT_VAL_PROPERTY,
         ShaclResource.SHACL_PREFIX + ShaclResource.DEFAULT_VAL_PROPERTY);
-    this.context.put(ShaclResource.CLASS_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.CLASS_PROPERTY);
-    this.context.put(ShaclResource.DATA_TYPE_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.DATA_TYPE_PROPERTY);
-    this.context.put(ShaclResource.IN_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.IN_PROPERTY);
+    contextHolder.put(ShaclResource.CLASS_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.CLASS_PROPERTY);
+    contextHolder.put(ShaclResource.DATA_TYPE_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.DATA_TYPE_PROPERTY);
+    contextHolder.put(ShaclResource.IN_PROPERTY, ShaclResource.SHACL_PREFIX + ShaclResource.IN_PROPERTY);
+    return contextHolder;
+  }
+
+  /**
+   * Initialise the ID property shape for the form template.
+   */
+  private Map<String, Object> setupIdPropertyShape() {
+    ObjectNode idFieldNode = this.jsonLdService.genInstance("_:",
+        ShaclResource.SHACL_PREFIX + ShaclResource.PROPERTY_SHAPE);
+    String idPropertyShapeDefinition = "{\"name\":{\"@value\":\"id\"}," +
+        "\"description\":{\"@value\":\"ID\"}," +
+        "\"order\":-1," +
+        "\"datatype\":\"string\"," +
+        "\"minCount\":{\"@type\":\"http://www.w3.org/2001/XMLSchema#integer\",\"@value\":\"1\"}," +
+        "\"maxCount\":{\"@type\":\"http://www.w3.org/2001/XMLSchema#integer\",\"@value\":\"1\"}" +
+        "}";
+    ObjectNode idRemainderPropertyShape = (ObjectNode) this.jsonLdService.readObjectNode(idPropertyShapeDefinition);
+    idFieldNode.setAll(idRemainderPropertyShape);
+    return this.jsonLdService.convertValue(idFieldNode, new TypeReference<HashMap<String, Object>>() {
+    });
   }
 
   /**
@@ -164,7 +193,9 @@ public class FormTemplateFactory {
         this.parseProperty(currentProperty, defaultVals, defaultProperties);
       }
     }
-    this.form.put(ShaclResource.PROPERTY_PROPERTY, this.genOutputs(defaultProperties));
+    List<Map<String, Object>> outputDefaultProperties = this.genOutputs(defaultProperties);
+    outputDefaultProperties.add(0, this.idPropertyShape);
+    this.form.put(ShaclResource.PROPERTY_PROPERTY, outputDefaultProperties);
 
     // Branches
     List<Map<String, Object>> nodeShape = new ArrayList<>();
@@ -327,6 +358,6 @@ public class FormTemplateFactory {
       }
       return propOrGroup;
     }).sorted(Comparator.comparingInt(map -> (int) map.get(ShaclResource.ORDER_PROPERTY))) // Sort results by order
-        .toList();
+        .collect(Collectors.toList());
   }
 }
